# ssl-vocoders

./: .gitignore  .gitmodules  README.md  pyproject.toml
config/: config.yaml
notebooks/: download_results.ipynb  evaluate_models.ipynb  get_upsample_rate.ipynb  plot_mel_feature.ipynb  plot_ssl_feature.ipynb
scripts/: run_preprocessing.sh  run_preprocessing_l3.sh  run_preprocessing_layers.sh  run_synthesize_chime.sh  run_synthesize_cmu_arctic.sh  run_synthesize_pnl.sh  run_synthesize_street.sh  run_training_hubert_base.sh  run_training_hubert_base_continue.sh  run_training_hubert_base_l3.sh  run_training_hubert_base_l3_continue.sh  run_training_hubert_large.sh  run_training_hubert_large_continue.sh  run_training_hubert_large_l6.sh  run_training_hubert_large_l6_continue.sh  run_training_mel.sh  run_training_wav2vec2_base.sh  run_training_wav2vec2_base_continue.sh  run_training_wav2vec2_base_l3.sh  run_training_wav2vec2_base_l3_continue.sh  run_training_wav2vec2_base_l6.sh  run_training_wav2vec2_base_l6_continue.sh  run_training_wav2vec2_base_l9.sh  run_training_wav2vec2_base_l9_continue.sh  run_training_wav2vec2_large.sh  run_training_wav2vec2_large_continue.sh  run_training_wav2vec2_large_l6.sh  run_training_wav2vec2_large_l6_continue.sh  run_training_wavlm_base.sh  run_training_wavlm_base_continue.sh  run_training_wavlm_base_l3.sh  run_training_wavlm_base_l3_continue.sh  run_training_wavlm_large.sh  run_training_wavlm_large_continue.sh  run_training_wavlm_large_l6.sh  run_training_wavlm_large_l6_continue.sh  run_training_wavlm_large_l8_xvector.sh  run_training_wavlm_large_l8_xvector_miipher_ft.sh
(+65 files in other folders)
